* emit signal when the color space of a paint device is changed * change the composite ops when the color space of the current layer is changed

all in all it fix the crash on painting just after changing the colorspace of an image

BUG:173565

svn path=/trunk/koffice/; revision=879756